--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -156,7 +156,7 @@ jobs:
     - name: Install dependencies
       run: |
         cd pathik-js
-        npm ci
+        npm install
     
     - name: Publish to npm
       run: |
